# Aniblog

./: .gitignore  Dockerfile  README.md  additional_package  docker-compose.yml  example.py  pyproject.toml  requirements.txt  requiremets.txt
backend/authentication/: .env  Dockerfile  pyproject.toml  pytest.ini
backend/authentication/app/: .env  base_storages.py  config.py  database.py  db.sqlite3  dependency.py  exception.py  main.py  models.py  oauth2.py  responses.py  routes.py  schemas.py  services.py
backend/authentication/app/abstract/: schemas.py  services.py
backend/authentication/app/initialization/: dependency.py  oauth2.py  routes.py  schemas.py  services.py  settings.py
backend/authentication/app/initialization/tests/: conftest.py  test_example.py  test_services.py
backend/authentication/app/initialization/tests/test_app/: conftest.py  unit_tests.py
backend/authentication/app/tests/: .dockerignore  .env  docker-compose.yml
backend/authentication/app/tests/integration_tests/test_rest/: conftest.py  test_initialization.py
backend/authentication/app/tests/test_app/: test_example.py
backend/authentication/app/tests/test_app/test_initialization/: conftest.py  test_rest.py
backend/authentication/app/users/: dependency.py  routes.py  schemas.py  services.py
backend/authentication/app/users/tests/test_app/: conftest.py  unit_test.py
backend/authentication/app/utils/: email_sender.py  gmail_sender.py  password_verification.py  token.py  verification_code.py
backend/authorisation/app/: main.py
docs/: technical_requirements.md
